-
Bug
-
Resolution: Fixed
-
P4
-
repo-valhalla
test/hotspot/jtreg/runtime/cds/appcds/RewriteBytecodesInlineTest.java started to fail (even with -Xint):
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x000071104749783a, pid=2693956, tid=2693957
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-lworld5ea-LTS-2025-05-22-1214417.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-lworld5ea-LTS-2025-05-22-1214417.tobias..., interpreted mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x69783a] oopDesc::klass() const+0x5a
Current thread (0x000071104002de60): JavaThread "main" [_thread_in_vm, id=2693957, stack(0x0000711049300000,0x0000711049400000) (1024K)]
Stack: [0x0000711049300000,0x0000711049400000], sp=0x00007110493fdb40, free space=1014k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x69783a] oopDesc::klass() const+0x5a (oop.inline.hpp:103)
V [libjvm.so+0x1aff118] SystemDictionary::load_shared_class(InstanceKlass*, Handle, Handle, ClassFileStream const*, PackageEntry*, JavaThread*)+0xd18 (systemDictionary.cpp:1114)
V [libjvm.so+0x1b05083] SystemDictionaryShared::load_shared_class_for_builtin_loader(Symbol*, Handle, JavaThread*)+0x243 (systemDictionaryShared.cpp:111)
V [libjvm.so+0x1b05256] SystemDictionaryShared::find_or_load_shared_class(Symbol*, Handle, JavaThread*)+0x1a6 (systemDictionaryShared.cpp:429)
V [libjvm.so+0x125395a] JVM_FindLoadedClass+0x30a (jvm.cpp:1280)
j java.lang.ClassLoader.findLoadedClass0(Ljava/lang/String;)Ljava/lang/Class;+0 java.base@25-lworld5ea
j java.lang.ClassLoader.findLoadedClass(Ljava/lang/String;)Ljava/lang/Class;+11 java.base@25-lworld5ea
j jdk.internal.loader.BuiltinClassLoader.loadClassOrNull(Ljava/lang/String;Z)Ljava/lang/Class;+10 java.base@25-lworld5ea
j jdk.internal.loader.BuiltinClassLoader.loadClass(Ljava/lang/String;Z)Ljava/lang/Class;+3 java.base@25-lworld5ea
j java.lang.ClassLoader.loadClass(Ljava/lang/String;)Ljava/lang/Class;+3 java.base@25-lworld5ea
v ~StubRoutines::call_stub 0x0000711034601001
V [libjvm.so+0x10a5728] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x508 (javaCalls.cpp:429)
V [libjvm.so+0x10a6123] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x313 (javaCalls.cpp:325)
V [libjvm.so+0x10a686a] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Handle, JavaThread*)+0xca (javaCalls.cpp:194)
V [libjvm.so+0x1aff500] SystemDictionary::load_instance_class_impl(Symbol*, Handle, JavaThread*)+0x1e0 (systemDictionary.cpp:1320)
V [libjvm.so+0x1afca5c] SystemDictionary::load_instance_class(Symbol*, Handle, JavaThread*)+0x1c (systemDictionary.cpp:1351)
V [libjvm.so+0x1afd5c8] SystemDictionary::resolve_instance_class_or_null(Symbol*, Handle, JavaThread*)+0x988 (systemDictionary.cpp:700)
V [libjvm.so+0x1afdb92] SystemDictionary::resolve_or_fail(Symbol*, Handle, bool, JavaThread*)+0x22 (systemDictionary.cpp:338)
V [libjvm.so+0xb9fb75] ConstantPool::klass_at_impl(constantPoolHandle const&, int, JavaThread*)+0x185 (constantPool.cpp:708)
V [libjvm.so+0x108aca2] InterpreterRuntime::_new(JavaThread*, ConstantPool*, int)+0xb2 (constantPool.hpp:387)
j RewriteBytecodesInline.main([Ljava/lang/String;)V+28
v ~StubRoutines::call_stub 0x0000711034601001
V [libjvm.so+0x10a5728] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x508 (javaCalls.cpp:429)
V [libjvm.so+0x12037c0] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*) [clone .constprop.1]+0x420 (jni.cpp:887)
V [libjvm.so+0x12077b4] jni_CallStaticVoidMethod+0x214 (jni.cpp:1746)
C [libjli.so+0x3b9a] invokeStaticMainWithArgs+0x4a (java.c:392)
C [libjli.so+0x4c78] JavaMain+0xf08 (java.c:640)
C [libjli.so+0x8019] ThreadJavaMain+0x9 (java_md.c:646)
C [libc.so.6+0x9caa4]
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x000071104749783a, pid=2693956, tid=2693957
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-lworld5ea-LTS-2025-05-22-1214417.tobias...)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-lworld5ea-LTS-2025-05-22-1214417.tobias..., interpreted mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x69783a] oopDesc::klass() const+0x5a
Current thread (0x000071104002de60): JavaThread "main" [_thread_in_vm, id=2693957, stack(0x0000711049300000,0x0000711049400000) (1024K)]
Stack: [0x0000711049300000,0x0000711049400000], sp=0x00007110493fdb40, free space=1014k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x69783a] oopDesc::klass() const+0x5a (oop.inline.hpp:103)
V [libjvm.so+0x1aff118] SystemDictionary::load_shared_class(InstanceKlass*, Handle, Handle, ClassFileStream const*, PackageEntry*, JavaThread*)+0xd18 (systemDictionary.cpp:1114)
V [libjvm.so+0x1b05083] SystemDictionaryShared::load_shared_class_for_builtin_loader(Symbol*, Handle, JavaThread*)+0x243 (systemDictionaryShared.cpp:111)
V [libjvm.so+0x1b05256] SystemDictionaryShared::find_or_load_shared_class(Symbol*, Handle, JavaThread*)+0x1a6 (systemDictionaryShared.cpp:429)
V [libjvm.so+0x125395a] JVM_FindLoadedClass+0x30a (jvm.cpp:1280)
j java.lang.ClassLoader.findLoadedClass0(Ljava/lang/String;)Ljava/lang/Class;+0 java.base@25-lworld5ea
j java.lang.ClassLoader.findLoadedClass(Ljava/lang/String;)Ljava/lang/Class;+11 java.base@25-lworld5ea
j jdk.internal.loader.BuiltinClassLoader.loadClassOrNull(Ljava/lang/String;Z)Ljava/lang/Class;+10 java.base@25-lworld5ea
j jdk.internal.loader.BuiltinClassLoader.loadClass(Ljava/lang/String;Z)Ljava/lang/Class;+3 java.base@25-lworld5ea
j java.lang.ClassLoader.loadClass(Ljava/lang/String;)Ljava/lang/Class;+3 java.base@25-lworld5ea
v ~StubRoutines::call_stub 0x0000711034601001
V [libjvm.so+0x10a5728] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x508 (javaCalls.cpp:429)
V [libjvm.so+0x10a6123] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x313 (javaCalls.cpp:325)
V [libjvm.so+0x10a686a] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Handle, JavaThread*)+0xca (javaCalls.cpp:194)
V [libjvm.so+0x1aff500] SystemDictionary::load_instance_class_impl(Symbol*, Handle, JavaThread*)+0x1e0 (systemDictionary.cpp:1320)
V [libjvm.so+0x1afca5c] SystemDictionary::load_instance_class(Symbol*, Handle, JavaThread*)+0x1c (systemDictionary.cpp:1351)
V [libjvm.so+0x1afd5c8] SystemDictionary::resolve_instance_class_or_null(Symbol*, Handle, JavaThread*)+0x988 (systemDictionary.cpp:700)
V [libjvm.so+0x1afdb92] SystemDictionary::resolve_or_fail(Symbol*, Handle, bool, JavaThread*)+0x22 (systemDictionary.cpp:338)
V [libjvm.so+0xb9fb75] ConstantPool::klass_at_impl(constantPoolHandle const&, int, JavaThread*)+0x185 (constantPool.cpp:708)
V [libjvm.so+0x108aca2] InterpreterRuntime::_new(JavaThread*, ConstantPool*, int)+0xb2 (constantPool.hpp:387)
j RewriteBytecodesInline.main([Ljava/lang/String;)V+28
v ~StubRoutines::call_stub 0x0000711034601001
V [libjvm.so+0x10a5728] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x508 (javaCalls.cpp:429)
V [libjvm.so+0x12037c0] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*) [clone .constprop.1]+0x420 (jni.cpp:887)
V [libjvm.so+0x12077b4] jni_CallStaticVoidMethod+0x214 (jni.cpp:1746)
C [libjli.so+0x3b9a] invokeStaticMainWithArgs+0x4a (java.c:392)
C [libjli.so+0x4c78] JavaMain+0xf08 (java.c:640)
C [libjli.so+0x8019] ThreadJavaMain+0x9 (java_md.c:646)
C [libc.so.6+0x9caa4]
- caused by
-
JDK-8360530 [lworld] CDS does not preload classes listed in the LoadableDescriptors attribute
-
- Resolved
-
- links to
-
Commit(lworld) openjdk/valhalla/7e4c1bc1
-
Review(lworld) openjdk/valhalla/1498