8361082: [lworld] RewriteBytecodesInlineTest fails with SIGSEGV